--- a/img/README
+++ b/img/README
@@ -1,3 +1,9 @@
 Папка для изображений.
-
---
+-img
+   img/logo-sedona.svg
+   img/logo-htmlacademy.svg
+   img/background.jpg
+   img/polygon.svg
+   img/amara-resort.jpg
+   img/desert-quail-inn.jpg
+   img/villasatpocodiablo.jpg
