--- a/img/README
+++ b/img/README
@@ -1,9 +1,13 @@
 Папка для изображений.
 -img
-   img/logo-sedona.svg
-   img/logo-htmlacademy.svg
+   img/welcome.png
+   img/logo.png
    img/background.jpg
-   img/polygon.svg
+   img/polygon.png
    img/amara-resort.jpg
    img/desert-quail-inn.jpg
    img/villasatpocodiablo.jpg
+   img/twitter.png
+   img/facebook.png
+   img/youtube.png
+   img/html-logo.png
